--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ analytics:
 # Site Author
 author:
   name             : "Wenjun (Richard) Yang"
-  avatar           : "profile.png"
+  avatar           : "images/profile.png"
   bio              : "Ph.D. Candidate in Computer Science at University of Washington, specializing in Internet of Things, Distributed Systems, and Differential Privacy"
   location         : "Tacoma, WA"
   employer         :
